continue lowercasing and shortening gwern.net names; begin depluralizing directory names (docs/, images/, notes/, reviews/)

--- a/404.page
+++ b/404.page
@@ -29,7 +29,7 @@ Try to remember... Other options:
 
 - visit the [**main index**](/index "'Essays', N/A 2009"){.backlink-not .icon-not} of pages to find what you are looking for
 - use a [**search engine**](https://www.google.com/search?q=site%3Agwern.net)
-- browse [documents by **tag**](/docs/index "‘Essays’, N/A 2009"){.backlink-not .icon-not}
+- browse [documents by **tag**](/doc/index "‘Essays’, N/A 2009"){.backlink-not .icon-not}
 - or look at this list of **pages by traffic**:
 
 <div class="columns">
@@ -41,9 +41,9 @@ Try to remember... Other options:
 - [Spaced Repetition for Efficient Learning](/spaced-repetition "Branwen 2009"){.backlink-not .icon-not}
 - [My Ordinary Life: Improvements Since the 1990s](/improvement "Branwen 2018"){.backlink-not .icon-not}
 - [Laws of Tech: Commoditize Your Complement](/complement "Branwen 2018"){.backlink-not .icon-not}
-- [OKCupid blog post archive](/docs/psychology/okcupid/index "‘Essays’, Branwen 2009"){.backlink-not .icon-not}
+- [OKCupid blog post archive](/doc/psychology/okcupid/index "‘Essays’, Branwen 2009"){.backlink-not .icon-not}
 - [Modafinil](/modafinil){.backlink-not .icon-not}
-- [Nootropics](/nootropics/nootropics){.backlink-not .icon-not}
+- [Nootropics](/nootropic/nootropics){.backlink-not .icon-not}
 - [Internet Search Tips](/search "Branwen 2018"){.backlink-not .icon-not}
 - [Dual _n_-Back FAQ](/dnb-faq "Branwen 2009"){.backlink-not .icon-not}
 - [_Death Note_: L, Anonymity & Eluding Entropy](/death-note-anonymity "Branwen 2011"){.backlink-not .icon-not}
@@ -72,7 +72,7 @@ Try to remember... Other options:
 - [Darknet Market mortality risks](/dnm-survival "Branwen 2013"){.backlink-not .icon-not}
 - [LSD microdosing RCT](/lsd-microdosing "Branwen 2012"){.backlink-not .icon-not}
 - [DNM-related arrests, 2011–2015](/dnm-arrest "Branwen 2012"){.backlink-not .icon-not}
-- [`/docs/newsletter/index`](/docs/newsletter/index "'Essays', N/A 2009"){.backlink-not .icon-not}
+- [`/docs/newsletter/index`](/doc/newsletter/index "'Essays', N/A 2009"){.backlink-not .icon-not}
 - [Complexity no Bar to AI](/complexity "Branwen 2014"){.backlink-not .icon-not}
 - [GPT-2 Folk Music](/gpt-2-music "Branwen & Presser 2019"){.backlink-not .icon-not}
 - [Evolution as Backstop for Reinforcement Learning](/backstop "Branwen 2018"){.backlink-not .icon-not}
@@ -86,15 +86,15 @@ Try to remember... Other options:
 - [In Defense Of Inclusionism](/inclusionism){.backlink-not .icon-not}
 - [Archiving URLs](/archiving){.backlink-not .icon-not}
 - [Choose-Your-Own-Adventure AI Dungeon Games](/cyoa "Branwen 2021"){.backlink-not .icon-not}
-- [Miscellaneous](/notes/note "Branwen 2009"){.backlink-not .icon-not}
-- [_Evangelion 2.0: The Complete Records Collection_](/docs/anime/eva/2010-crc "‘Evangelion 2.0 Complete Records Collection’, Hikawa et al 2011"){.backlink-not .icon-not}
+- [Miscellaneous](/note/note "Branwen 2009"){.backlink-not .icon-not}
+- [_Evangelion 2.0: The Complete Records Collection_](/doc/anime/eva/2010-crc "‘Evangelion 2.0 Complete Records Collection’, Hikawa et al 2011"){.backlink-not .icon-not}
 - [Prediction markets](/prediction-market){.backlink-not .icon-not}
 - [Time-lock encryption](/self-decrypting "Branwen 2011"){.backlink-not .icon-not}
 - [Genetics and Eugenics in Frank Herbert’s Dune-verse](/dune-genetics "Branwen 2018"){.backlink-not .icon-not}
 - [CO<sub>2</sub> Coin: Decentralized Carbon Capture Blockchains](/co2-coin "Branwen 2021"){.backlink-not .icon-not}
-- [Wei Dai/Satoshi Nakamoto 2009 Bitcoin emails](/docs/bitcoin/2008-nakamoto "Nakamoto & Dai 2014"){.backlink-not .icon-not}
-- ["Earth in My Window"](/docs/anime/eva/little-boy/2005-murakami "Murakami & Hoaglund 2012"){.backlink-not .icon-not}
-- [Book Reviews](/reviews/book "Branwen 2013"){.backlink-not .icon-not}
+- [Wei Dai/Satoshi Nakamoto 2009 Bitcoin emails](/doc/bitcoin/2008-nakamoto "Nakamoto & Dai 2014"){.backlink-not .icon-not}
+- ["Earth in My Window"](/doc/anime/eva/little-boy/2005-murakami "Murakami & Hoaglund 2012"){.backlink-not .icon-not}
+- [Book Reviews](/review/book "Branwen 2013"){.backlink-not .icon-not}
 - [How Should We Critique Research?](/research-criticism "Branwen 2019"){.backlink-not .icon-not}
 - [Open Questions](/question "Branwen 2018"){.backlink-not .icon-not}
 - [Hydrocephalus and Intelligence: The Hollow Men](/hydrocephalus "Branwen 2015"){.backlink-not .icon-not}
@@ -112,39 +112,39 @@ Try to remember... Other options:
 - [`/newsletter/2020/11`](/newsletter/2020/11 "‘November 2020 News’, Branwen 2019"){.backlink-not .icon-not}
 - [Terrorism is not about Terror](/terrorism-is-not-about-terror){.backlink-not .icon-not}
 - [Sunk costs](/sunk-cost "‘Are Sunk Costs Fallacies?’, Branwen 2012"){.backlink-not .icon-not}
-- [Magnesium Self-Experiments](/nootropics/magnesium "Branwen 2013"){.backlink-not .icon-not}
-- [The Math of Hunting Lions](/notes/lion){.backlink-not .icon-not}
+- [Magnesium Self-Experiments](/nootropic/magnesium "Branwen 2013"){.backlink-not .icon-not}
+- [The Math of Hunting Lions](/note/lion){.backlink-not .icon-not}
 - [`/newsletter/2020/04`](/newsletter/2020/04 "‘April 2020 News’, Branwen 2019"){.backlink-not .icon-not}
 - [`/newsletter/2020/12`](/newsletter/2020/12 "‘December 2020 News’, Branwen 2019"){.backlink-not .icon-not}
 - [`/newsletter/2021/06`](/newsletter/2021/06 "‘June 2021 News’, Branwen 2020"){.backlink-not .icon-not}
-- [Silk Road 1: Theory & Practice](/docs/darknet-markets/index "Branwen 2011"){.backlink-not .icon-not}
+- [Silk Road 1: Theory & Practice](/doc/darknet-markets/index "Branwen 2011"){.backlink-not .icon-not}
 - [Potassium sleep experiments](/zeo/potassium "Branwen 2012"){.backlink-not .icon-not}
-- [June 1996 _NewType_ Interview with Hideaki Anno](/docs/anime/eva/1996-newtype-anno-interview "Anno & Inoue 2012"){.backlink-not .icon-not}
-  [Statistical notes](/notes/statistic){.backlink-not .icon-not}
+- [June 1996 _NewType_ Interview with Hideaki Anno](/doc/anime/eva/1996-newtype-anno-interview "Anno & Inoue 2012"){.backlink-not .icon-not}
+  [Statistical notes](/note/statistic){.backlink-not .icon-not}
 - [Creatine Cognition Meta-analysis](/creatine "Branwen 2013"){.backlink-not .icon-not}
 - [Culture is not about Esthetics](/culture-is-not-about-esthetics){.backlink-not .icon-not}
-- ["The Iron Law Of Evaluation And Other Metallic Rules"](/docs/sociology/1987-rossi "Rossi 2012"){.backlink-not .icon-not}
+- ["The Iron Law Of Evaluation And Other Metallic Rules"](/doc/sociology/1987-rossi "Rossi 2012"){.backlink-not .icon-not}
 - [On Having Enough Socks](/socks "Branwen 2017"){.backlink-not .icon-not}
 - [The Replication Crisis: Flaws in Mainstream Science](/replication "Branwen 2010"){.backlink-not .icon-not}
 - [`/newsletter/2021/02`](/newsletter/2021/02 "‘February 2021 News’, Branwen 2020"){.backlink-not .icon-not}
 - [Timing Technology: Lessons From _The Media Lab_](/timing "Branwen 2012"){.backlink-not .icon-not}
 - [The Kelly Coin-Flipping Game: Exact Solutions](/coin-flip "Branwen et al 2017"){.backlink-not .icon-not}
-- [`/docs/nootropic/quantified-self/index`](/docs/nootropic/quantified-self/index "'Essays', N/A 2009"){.backlink-not .icon-not}
+- [`/docs/nootropic/quantified-self/index`](/doc/nootropic/quantified-self/index "'Essays', N/A 2009"){.backlink-not .icon-not}
 - [Iodine and Adult IQ meta-analysis](/iodine "Branwen 2012"){.backlink-not .icon-not}
 - [Dual _n_-Back Meta-Analysis](/dnb-meta-analysis "Branwen 2012"){.backlink-not .icon-not}
 - [When Should I Check The Mail?](/mail-delivery "Branwen 2015"){.backlink-not .icon-not}
 - [`/newsletter/2021/04`](/newsletter/2021/04 "‘April 2021 News’, Branwen 2020"){.backlink-not .icon-not}
 - [The Existential Risk of Mathematical Error](/math-error "‘The Existential Risk of Math Errors’, Branwen 2012"){.backlink-not .icon-not}
-- ["Ero-Anime: Manga Comes Alive"](/docs/anime/2010-sarrazin){.backlink-not .icon-not}
+- ["Ero-Anime: Manga Comes Alive"](/doc/anime/2010-sarrazin){.backlink-not .icon-not}
 - [The "Screwfly Solution" Solution: Bi-Sexuality](/screwfly){.backlink-not .icon-not}
 - [Predicting Google closures](/google-shutdown "Branwen 2013"){.backlink-not .icon-not}
 - [`/The-Narrowing-Circle`](/narrowing-circle){.backlink-not .icon-not}
-- [The Notenki Memoirs: Studio Gainax And The Men Who Created Evangelion](/docs/anime/eva/2002-takeda-notenkimemoirs "Takeda 2010"){.backlink-not .icon-not}
+- [The Notenki Memoirs: Studio Gainax And The Men Who Created Evangelion](/doc/anime/eva/2002-takeda-notenkimemoirs "Takeda 2010"){.backlink-not .icon-not}
 - [Who Wrote The _Death Note_ Script?](/death-note-script "Branwen 2009"){.backlink-not .icon-not}
 - [Rubrication Design Examples](/red "Branwen 2019"){.backlink-not .icon-not}
 - [Longevity decision analysis](/longevity "‘Life Extension Cost-Benefits’, Branwen 2015"){.backlink-not .icon-not}
 - [`/newsletter/2019/13`](/newsletter/2019/13 "‘2019 News’, Branwen 2019"){.backlink-not .icon-not}
-- [_Utena_ boxset notes](/docs/anime/1997-utena "‘Utena 2011 Boxset Booklet Commentary’, Ikuhara et al 2013"){.backlink-not .icon-not}
+- [_Utena_ boxset notes](/doc/anime/1997-utena "‘Utena 2011 Boxset Booklet Commentary’, Ikuhara et al 2013"){.backlink-not .icon-not}
 - [Tryon’s Rat Experiment](/tryon "Branwen 2020"){.backlink-not .icon-not}
 - [_Genius Revisited_ Revisited](/hunter "Branwen 2016"){.backlink-not .icon-not}
 - [Epigrams](/epigram){.backlink-not .icon-not}
@@ -156,60 +156,60 @@ Try to remember... Other options:
 - [GPT-2 Preference Learning for Music Generation](/gpt-2-preference-learning "Branwen 2019"){.backlink-not .icon-not}
 - [Hafu in anime](/hafu "‘Hafu Gender Ratios in Anime’, Branwen 2011"){.backlink-not .icon-not}
 - [`/komm-susser-tod`](/komm-susser-tod){.backlink-not .icon-not}
-- [`/docs/bitcoin/index`](/docs/bitcoin/index "'Essays', N/A 2009"){.backlink-not .icon-not}
+- [`/docs/bitcoin/index`](/doc/bitcoin/index "'Essays', N/A 2009"){.backlink-not .icon-not}
 - [CO2/ventilation sleep experiment](/zeo/co2 "Branwen 2016"){.backlink-not .icon-not}
 - [ZMA Sleep Experiment](/zeo/zma "Branwen 2017"){.backlink-not .icon-not}
-- [_MLP_: Immanetizing The Equestrian](/reviews/mlp "Branwen 2018"){.backlink-not .icon-not}
+- [_MLP_: Immanetizing The Equestrian](/review/mlp "Branwen 2018"){.backlink-not .icon-not}
 - [`/newsletter/2020/03`](/newsletter/2020/03 "‘March 2020 News’, Branwen 2019"){.backlink-not .icon-not}
 - ["Scanners Live in Vain" as realistic SF](/scanners "Branwen 2013"){.backlink-not .icon-not}
-- [Lizardman Constant in Surveys](/notes/lizardman "Branwen 2013"){.backlink-not .icon-not}
-- [Anime Reviews](/reviews/anime "Branwen 2010"){.backlink-not .icon-not}
+- [Lizardman Constant in Surveys](/note/lizardman "Branwen 2013"){.backlink-not .icon-not}
+- [Anime Reviews](/review/anime "Branwen 2010"){.backlink-not .icon-not}
 - [Resorting Media Ratings](/resorter "Branwen 2015"){.backlink-not .icon-not}
 - [Caffeine wakeup experiment](/zeo/caffeine "Branwen 2013"){.backlink-not .icon-not}
 - [Terrorism is not Effective](/terrorism-is-not-effective){.backlink-not .icon-not}
-- ["Shiny Balls of Mud"](/docs/japan/art/2002-gibson "‘Shiny balls of Mud: William Gibson Looks at Japanese Pursuits of Perfection’, Gibson 2012"){.backlink-not .icon-not}
-- [`/docs/anime/index`](/docs/anime/index "'Essays', N/A 2009"){.backlink-not .icon-not}
+- ["Shiny Balls of Mud"](/doc/japan/art/2002-gibson "‘Shiny balls of Mud: William Gibson Looks at Japanese Pursuits of Perfection’, Gibson 2012"){.backlink-not .icon-not}
+- [`/docs/anime/index`](/doc/anime/index "'Essays', N/A 2009"){.backlink-not .icon-not}
 - [SMPY Bibliography](/smpy "Branwen 2018"){.backlink-not .icon-not}
-- [Cat Psychology & Domestication: Are We Good Owners?](/reviews/cat "Branwen 2018"){.backlink-not .icon-not}
+- [Cat Psychology & Domestication: Are We Good Owners?](/review/cat "Branwen 2018"){.backlink-not .icon-not}
 - [Wooden pillows](/wood-pillow "‘Wooden Pillow’, Branwen 2008"){.backlink-not .icon-not}
-- [`/docs/psychology/index`](/docs/psychology/index "'Essays', N/A 2009"){.backlink-not .icon-not}
-- [`/notes/Scaling`](/notes/scaling "‘Machine Learning Scaling’, Branwen 2021"){.backlink-not .icon-not}
-- [Origins of Innovation: Bakewell & Breeding](/reviews/bakewell "Branwen 2018"){.backlink-not .icon-not}
+- [`/docs/psychology/index`](/doc/psychology/index "'Essays', N/A 2009"){.backlink-not .icon-not}
+- [`/notes/Scaling`](/note/scaling "‘Machine Learning Scaling’, Branwen 2021"){.backlink-not .icon-not}
+- [Origins of Innovation: Bakewell & Breeding](/review/bakewell "Branwen 2018"){.backlink-not .icon-not}
 - [Conscientiousness and online education](/conscientiousness "‘Conscientiousness & Online Education’, Branwen 2012"){.backlink-not .icon-not}
-- [The Ups and Downs of the Hope Function](/docs/statistics/bayes/1994-falk "‘The Ups and Downs of the Hope Function In a Fruitless Search’, Falk et al 2012"){.backlink-not .icon-not}
-- [`/docs/ai/nn/transformer/gpt/index`](/docs/ai/nn/transformer/gpt/index "'Essays', N/A 2009"){.backlink-not .icon-not}
-- ["Loyal to the Group of Seventeen’s Story—The Just Man"](/docs/culture/1983-wolfe-thecitadeloftheautarch-thejustman "Wolfe 2018"){.backlink-not .icon-not}
+- [The Ups and Downs of the Hope Function](/doc/statistics/bayes/1994-falk "‘The Ups and Downs of the Hope Function In a Fruitless Search’, Falk et al 2012"){.backlink-not .icon-not}
+- [`/docs/ai/nn/transformer/gpt/index`](/doc/ai/nn/transformer/gpt/index "'Essays', N/A 2009"){.backlink-not .icon-not}
+- ["Loyal to the Group of Seventeen’s Story—The Just Man"](/doc/culture/1983-wolfe-thecitadeloftheautarch-thejustman "Wolfe 2018"){.backlink-not .icon-not}
 - [Charity is not about helping](/charity-is-not-about-helping){.backlink-not .icon-not}
 - [Slowing Moore’s Law: How It Could Happen](/slowing-moores-law "Branwen 2012"){.backlink-not .icon-not}
 - [Immoral Books](/immoral-book){.backlink-not .icon-not}
 - [A/B testing long-form readability on Gwern.net](/ab-test "Branwen 2012"){.backlink-not .icon-not}
-- [_McNamara's Folly_: The Denial of Individual Differences](/reviews/mcnamara){.backlink-not .icon-not}
-- [Nash 1955](/docs/cs/cryptography/1955-nash "‘John Nash on cryptography’, Nash 2012"){.backlink-not .icon-not}
+- [_McNamara's Folly_: The Denial of Individual Differences](/review/mcnamara){.backlink-not .icon-not}
+- [Nash 1955](/doc/cs/cryptography/1955-nash "‘John Nash on cryptography’, Nash 2012"){.backlink-not .icon-not}
 - [Does Mouse Utopia Exist?](/mouse-utopia "Branwen 2019"){.backlink-not .icon-not}
-- [Ordinary Incompetence](/notes/competence){.backlink-not .icon-not}
+- [Ordinary Incompetence](/note/competence){.backlink-not .icon-not}
 - [`/newsletter/2020/13`](/newsletter/2020/13 "‘2020 News’, Branwen 2019"){.backlink-not .icon-not}
 - [An Abortion Dialogue](/abortion){.backlink-not .icon-not}
 - [On Seeing Through and Unseeing: The Hacker Mindset](/unseeing "Branwen 2012"){.backlink-not .icon-not}
 - [What Is The Collecting Mindset?](/collecting){.backlink-not .icon-not}
-- [Tea Reviews](/reviews/tea "Branwen 2011"){.backlink-not .icon-not}
+- [Tea Reviews](/review/tea "Branwen 2011"){.backlink-not .icon-not}
 - [On the (Non) Existence of Powerful Natural Languages](/language "Branwen 2016"){.backlink-not .icon-not}
-- [`/docs/insight-porn/index`](/docs/insight-porn/index "'Essays', N/A 2009"){.backlink-not .icon-not}
-- [`/docs/index`](/docs/index "Documents, N/A 2009"){.backlink-not .icon-not}
+- [`/docs/insight-porn/index`](/doc/insight-porn/index "'Essays', N/A 2009"){.backlink-not .icon-not}
+- [`/docs/index`](/doc/index "Documents, N/A 2009"){.backlink-not .icon-not}
 - [Fake Journal Club: Teaching Critical Reading](/fake-journal-club "Branwen 2022"){.backlink-not .icon-not}
 - [Wikipedia resume](/wikipedia-resume "‘Wikipedia Résumé’, Branwen 2010"){.backlink-not .icon-not}
 - [Choosing Software](/choosing-software){.backlink-not .icon-not}
-- ["Otaku Talk"](/docs/anime/eva/little-boy/2004-okada){.backlink-not .icon-not}
+- ["Otaku Talk"](/doc/anime/eva/little-boy/2004-okada){.backlink-not .icon-not}
 - [Reasons of State: Why Didn’t Denmark Sell Greenland?](/greenland "Branwen 2011"){.backlink-not .icon-not}
-- [Efficient Attention: Breaking The Quadratic Transformer Bottleneck](/notes/attention "Branwen 2020"){.backlink-not .icon-not}
-- [May 1997 _AnimeLand_ Interview with Hideaki Anno (English)](/docs/anime/eva/1997-anno-english "Anno 2012"){.backlink-not .icon-not}
+- [Efficient Attention: Breaking The Quadratic Transformer Bottleneck](/note/attention "Branwen 2020"){.backlink-not .icon-not}
+- [May 1997 _AnimeLand_ Interview with Hideaki Anno (English)](/doc/anime/eva/1997-anno-english "Anno 2012"){.backlink-not .icon-not}
 - [RNN Metadata for Mimicking Author Style](/rnn-metadata "Branwen 2015"){.backlink-not .icon-not}
-- [`/docs/japan/poetry/teika/teika`](/docs/japan/poetry/teika/teika "‘The Poems of Fujiwara no Teika’, Teika 2011"){.backlink-not .icon-not}
+- [`/docs/japan/poetry/teika/teika`](/doc/japan/poetry/teika/teika "‘The Poems of Fujiwara no Teika’, Teika 2011"){.backlink-not .icon-not}
 - [Lithium in ground-water and well-being](/lithium "Branwen 2010"){.backlink-not .icon-not}
 - [Making Anime With BigGAN](/biggan "Branwen 2019"){.backlink-not .icon-not}
-- [Superrationality, Hofstadter 1985](/docs/existential-risk/1985-hofstadter "‘Metamagical Themas: Sanity and Survival’, Hofstadter 2012"){.backlink-not .icon-not}
+- [Superrationality, Hofstadter 1985](/doc/existential-risk/1985-hofstadter "‘Metamagical Themas: Sanity and Survival’, Hofstadter 2012"){.backlink-not .icon-not}
 - [Music and distraction](/music-distraction){.backlink-not .icon-not}
 - [Dune notes](/dune "Branwen 2010"){.backlink-not .icon-not}
-- [`/docs/nootropic/index`](/docs/nootropic/index "'Essays', N/A 2009"){.backlink-not .icon-not}
-- [_Radiance: A Novel_](/docs/radiance/2002-scholz-radiance "Scholz et al 2013"){.backlink-not .icon-not}
+- [`/docs/nootropic/index`](/doc/nootropic/index "'Essays', N/A 2009"){.backlink-not .icon-not}
+- [_Radiance: A Novel_](/doc/radiance/2002-scholz-radiance "Scholz et al 2013"){.backlink-not .icon-not}
 - [Catnip immunity and alternatives](/catnip "Branwen 2015"){.backlink-not .icon-not}
 </div>
