--- a/css/default.css
+++ b/css/default.css
@@ -979,7 +979,7 @@ video + .caption-wrapper {
     padding-bottom: 1px;
 }
 
-/*  Enable the various `![caption](/images/foo.jpg){.width-full}` uses;
+/*  Enable the various `![caption](/image/foo.jpg){.width-full}` uses;
     analogous to width-full tables
  */
 figure.width-full {
@@ -1295,7 +1295,7 @@ a.footnote-ref {
 /*  On directory indexes, titles may include ‘19th’ century, which with the
     default size & padding makes the ‘TH’ really stand out. e.g.
 
-    https://gwern.net/docs/sociology/index#johow-et-al-2019-section ‘“HIGH CONSANGUINITY PROMOTES INTERGENERATIONAL WEALTH CONCENTRATION IN SOCIOECONOMICALLY PRIVILEGED KRUMMHÖRN FAMILIES OF THE 18TH AND 19TH CENTURIES”, JOHOW ET AL 2019’
+    https://gwern.net/doc/sociology/index#johow-et-al-2019-section ‘“HIGH CONSANGUINITY PROMOTES INTERGENERATIONAL WEALTH CONCENTRATION IN SOCIOECONOMICALLY PRIVILEGED KRUMMHÖRN FAMILIES OF THE 18TH AND 19TH CENTURIES”, JOHOW ET AL 2019’
  */
 h1 sub, h1 sup, h2 sub, h2 sup {
     font-size: 0.6em;
@@ -2802,7 +2802,7 @@ body.index-long section > .include-wrapper-block + .include-wrapper-block {
 }
 
 /*=----------------=*/
-/*= /reviews/book =*/
+/*= /review/book =*/
 /*=----------------=*/
 
 #markdownBody .book-review-meta {
@@ -2834,12 +2834,12 @@ body.index-long section > .include-wrapper-block + .include-wrapper-block {
 }
 
 /*=---------------=*/
-/*= /reviews/mead =*/
+/*= /review/mead =*/
 /*=---------------=*/
 
 /*  This is for the pictures of mead bottles next to the reviews.
     */
-body.reviews-mead p > img {
+body.review-mead p > img {
     float: right;
     max-height: 8em;
     width: auto;
@@ -2860,12 +2860,12 @@ body.hafu .table-wrapper#hafu-list-table td:last-of-type {
 /*= /dnm-arrest =*/
 /*=--------------=*/
 
-body.dnm-arrests .table-wrapper#data-table td:nth-of-type(6),
-body.dnm-arrests .table-wrapper#data-table td:nth-of-type(12),
-body.dnm-arrests .table-wrapper#data-table td:nth-of-type(13) {
+body.dnm-arrest .table-wrapper#data-table td:nth-of-type(6),
+body.dnm-arrest .table-wrapper#data-table td:nth-of-type(12),
+body.dnm-arrest .table-wrapper#data-table td:nth-of-type(13) {
     white-space: nowrap;
 }
-body.dnmarrests .table-wrapper#data-table td:last-of-type {
+body.dnmarrest .table-wrapper#data-table td:last-of-type {
     width: 20%;
 }
 
