--- a/templates/default.html
+++ b/templates/default.html
@@ -89,8 +89,8 @@
         <a class="icon-not site  link-page link-annotated" href="/about"                 title="Site ideals, source, content, traffic, examples, license" rel="author">Site</a>
         <a class="icon-not me    link-page link-annotated" href="/me"                    title="Who am I online, what have I done, what am I like? Contact information; sites I use; things I've worked on" rel="author">Me</a>
         <a class="icon-not new   link-page link-annotated" href="/changelog"             title="Changelog of what's new or updated">Changes</a>
-        <a class="icon-not mail  link-page"                href="/docs/newsletter/index" title="Monthly mailing list archives" rel="me">News</a>
-        <a class="icon-not annotations-newest link-page"   href="/docs/newest/index"     title="Most recent link annotations">Links</a>
+        <a class="icon-not mail  link-page"                href="/doc/newsletter/index" title="Monthly mailing list archives" rel="me">News</a>
+        <a class="icon-not annotations-newest link-page"   href="/doc/newest/index"     title="Most recent link annotations">Links</a>
         <a class="icon-not patreon" href="https://www.patreon.com/gwern" title="Link to Patreon donation profile to support my writing" rel="me">support on<br /><span>PATREON</span></a>
         </div>
       </nav>
